// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Footer /> with just a subtitle 1`] = `
<div
  class="feature__Container-sc-19zs3jp-0 fJSYSJ"
>
  <h2
    class="feature__SubTitle-sc-19zs3jp-2 dMGKTO"
  >
    Watch anywhere. cancel at any time.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Footer /> with just a title 1`] = `
<div
  class="feature__Container-sc-19zs3jp-0 fJSYSJ"
>
  <h1
    class="feature__Title-sc-19zs3jp-1 frMQVC"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature /> renders the <Footer /> with populated data 1`] = `
<div
  class="feature__Container-sc-19zs3jp-0 fJSYSJ"
>
  <h1
    class="feature__Title-sc-19zs3jp-1 frMQVC"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <h2
    class="feature__SubTitle-sc-19zs3jp-2 dMGKTO"
  >
    Watch anywhere. cancel at any time.
  </h2>
</div>
`;
